e2e-fixtures/hello-world-ingress/hello-world-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    k8s.ngrok.com/tls-min-version: "1.3"
    k8s.ngrok.com/response-headers-add: |
      {
        "X-SEND-TO-CLIENT": "Value1"
      }
spec:
  ingressClassName: ngrok
  rules:
  - host: SET-VIA-config.yaml
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: http-echo-svc
            port:
              number: 80
      - path: /nginx
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
  - host: SET-VIA-config.yaml
    http:
      paths:
      - path: /test
        pathType: Prefix
        backend:
          service:
            name: http-echo-svc
            port:
              number: 80
      - path: /nginx
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress-pt2
  annotations:
    k8s.ngrok.com/tls-min-version: "1.3"
    k8s.ngrok.com/response-headers-add: |
      {
        "X-SEND-TO-CLIENT": "Value2"
      }
spec:
  ingressClassName: ngrok
  rules:
  - host: SET-VIA-config.yaml
    http:
      paths:
      - path: /second
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
      - path: /nginx-second
        pathType: Prefix
        backend:
          service:
            name: http-echo-svc
            port:
              number: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-echo-deploy
spec:
  selector:
    matchLabels:
      app: http-echo-app
  replicas: 2
  template:
    metadata:
      labels:
        app: http-echo-app
    spec:
      containers:
      - name: http-echo-path2
        image: mendhak/http-https-echo:24
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: http-echo-svc
  labels:
    app: http-echo-app
spec:
  ports:
  - name: http-echo-app
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: http-echo-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.21.3
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  ports:
  - name: nginx
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
